--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "com.unity.formspackage",
-    "displayName": "Timeline",
-    "version": "1.4.7",
+    "displayName": "Forms",
+    "version": "1.0.0",
     "unity": "2019.3",
     "description": "Use this as component to add it to the form object",
 
